[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "douyin-topic-packager"
version = "0.1.0"
description = "Generate Douyin benchmark-account topic packages from profile links and comments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Jerry302-svg" }]
dependencies = [
  "aiohttp>=3.9.0",
  "playwright>=1.45.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
douyin-topic-packager = "douyin_topic_packager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
